Support both tokio 0.1 and 0.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ branches:
     - master
 script:
   - cargo build
-  - cargo test
+  - cargo test --no-default-features --features tokio02
 env:
   - RUST_BACKTRACE=1
