--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leaky-bucket"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["John-John Tedro <udoprog@tedro.se>"]
 edition = "2018"
 license = "MIT/Apache-2.0"
@@ -14,12 +14,12 @@ Futures-aware rate limiter implementation.
 categories = ["algorithms", "network-programming", "concurrency"]
 
 [dependencies]
-futures-channel-preview = "0.3.0-alpha.19"
-futures-util-preview = { version = "0.3.0-alpha.19", features = ["select-macro"] }
-tokio-timer = "0.3.0-alpha.6"
+futures-channel-preview = "=0.3.0-alpha.19"
+futures-util-preview = { version = "=0.3.0-alpha.19", features = ["select-macro"] }
+tokio-timer = "=0.3.0-alpha.6"
 log = "0.4.7"
 
 [dev-dependencies]
-futures-preview = "0.3.0-alpha.19"
-pin-utils = "0.1.0-alpha.4"
-tokio = "0.2.0-alpha.6"
+futures-preview = "=0.3.0-alpha.19"
+pin-utils = "=0.1.0-alpha.4"
+tokio = "=0.2.0-alpha.6"
