--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,11 @@ Futures-aware rate limiter implementation.
 categories = ["algorithms", "network-programming", "concurrency"]
 
 [dependencies]
-futures-channel-preview = "=0.3.0-alpha.19"
-futures-util-preview = { version = "=0.3.0-alpha.19", features = ["select-macro"] }
-tokio-timer = "=0.3.0-alpha.6"
+futures-channel = "0.3.1"
+futures-util = "0.3.1"
+tokio = { version = "0.2.4", features = ["time", "stream"] }
 log = "0.4.7"
 
 [dev-dependencies]
-futures-preview = "=0.3.0-alpha.19"
-pin-utils = "=0.1.0-alpha.4"
-tokio = "=0.2.0-alpha.6"
+futures = "0.3.1"
+tokio = { version = "0.2.4", features = ["macros", "rt-core"] }
