--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ futures-channel = "0.3.1"
 futures-util = "0.3.1"
 tokio = { version = "0.2.4", features = ["time", "stream"] }
 log = "0.4.7"
+lazy_static = { version = "1.4.0", optional = true }
+
+[features]
+default = ["static"]
+static = ["lazy_static"]
 
 [dev-dependencies]
 futures = "0.3.1"
