--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures-util = "0.3.1"
 tokio = { version = "0.2.4", features = ["time", "stream"] }
 log = "0.4.7"
 lazy_static = { version = "1.4.0", optional = true }
+thiserror = "1.0.9"
 
 [features]
 default = ["static"]
