--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,8 @@ Futures-aware rate limiter implementation.
 categories = ["algorithms", "network-programming", "concurrency"]
 
 [dependencies]
-futures-channel = "0.3.1"
 futures-util = "0.3.1"
-tokio = { version = "0.2.13", features = ["time", "stream"] }
+tokio = { version = "0.2.22", features = ["time", "stream", "sync"] }
 log = "0.4.7"
 lazy_static = { version = "1.4.0", optional = true }
 thiserror = "1.0.9"
