--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leaky-bucket"
-version = "0.10.0"
+version = "0.11.0"
 authors = ["John-John Tedro <udoprog@tedro.se>"]
 edition = "2018"
 license = "MIT/Apache-2.0"
@@ -14,17 +14,13 @@ Futures-aware rate limiter implementation.
 categories = ["algorithms", "network-programming", "concurrency"]
 
 [dependencies]
-futures-util = "0.3.1"
-tokio = { version = "1", features = ["macros", "time", "sync"] }
-tokio-stream = "0.1.0"
-log = "0.4.7"
-lazy_static = { version = "1.4.0", optional = true }
-thiserror = "1.0.9"
-
-[features]
-default = ["static"]
-static = ["lazy_static", "tokio/rt"]
+parking_lot = "0.11.1"
+tokio = { version = "1", features = ["time"] }
+tracing = "0.1.26"
 
 [dev-dependencies]
-futures = "0.3.1"
-tokio = { version = "1", features = ["full"] }
+anyhow = "1.0.40"
+futures = "0.3"
+helpers = { path = "helpers" }
+pin-project = "1"
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "time"] }
