--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "leaky-bucket"
 version = "0.12.2"
 authors = ["John-John Tedro <udoprog@tedro.se>"]
 edition = "2018"
+rust-version = "1.56"
 description = "Futures-aware rate limiter implementation."
 documentation = "https://docs.rs/leaky-bucket"
 readme = "README.md"
