--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rust: ["1.59", stable]
+        rust: ['1.56', stable]
     steps:
     - uses: actions/checkout@v3
     - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{matrix.rust}}
-    - run: cargo test --workspace --all-targets
-    - run: cargo test --workspace --doc
+    - run: cargo build
+      if: matrix.rust != 'stable'
+    - run: cargo test --all-targets
+      if: matrix.rust == 'stable'
+    - run: cargo test --doc
+      if: matrix.rust == 'stable'
 
   clippy:
     runs-on: ubuntu-latest
