--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.12.4"
 authors = ["John-John Tedro <udoprog@tedro.se>"]
 edition = "2018"
 rust-version = "1.56"
-description = "Futures-aware rate limiter implementation."
+description = "A token-based rate limiter based on the leaky bucket algorithm."
 documentation = "https://docs.rs/leaky-bucket"
 readme = "README.md"
 homepage = "https://github.com/udoprog/leaky-bucket"
 repository = "https://github.com/udoprog/leaky-bucket"
 license = "MIT/Apache-2.0"
-keywords = ["ratelimit", "throttle", "tokenbucket"]
+keywords = ["ratelimit", "throttle", "tokenbucket", "async", "futures"]
 categories = ["algorithms", "concurrency", "network-programming"]
 
 [dependencies]
