--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ categories = ["algorithms", "concurrency", "network-programming"]
 
 [dependencies]
 parking_lot = "0.12.1"
-tokio = { version = "1.27.0", features = ["time"] }
-tracing = "0.1.37"
+tokio = { version = "1.28.1", features = ["time"] }
+tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
 
 [dev-dependencies]
-anyhow = "1.0.70"
+anyhow = "1.0.71"
 futures = "0.3.28"
 helpers = { path = "helpers" }
 pin-project = "1.0.12"
-tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "rt", "time"] }
+tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "rt", "time"] }
