--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 homepage = "https://github.com/udoprog/leaky-bucket"
 repository = "https://github.com/udoprog/leaky-bucket"
 license = "MIT/Apache-2.0"
-keywords = ["ratelimit", "throttle", "tokenbucket", "async", "futures"]
+keywords = ["async", "futures", "ratelimit", "throttle", "tokenbucket"]
 categories = ["algorithms", "concurrency", "network-programming"]
 
 [dependencies]
