--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ documentation = "https://docs.rs/leaky-bucket"
 readme = "README.md"
 homepage = "https://github.com/udoprog/leaky-bucket"
 repository = "https://github.com/udoprog/leaky-bucket"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["async", "futures", "ratelimit", "throttle", "tokenbucket"]
 categories = ["algorithms", "concurrency", "network-programming"]
 
