--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
     - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{matrix.rust}}
-    - run: cargo build
-      if: matrix.rust != 'stable'
+    - run: cargo build --workspace
     - run: cargo test --all-targets
       if: matrix.rust == 'stable'
     - run: cargo test --doc
