--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tracing = ["dep:tracing"]
 
 [dependencies]
 parking_lot = "0.12.1"
+pin-project-lite = "0.2.14"
 tokio = { version = "1.28.1", features = ["time"] }
 tracing = { version = "0.1.37", default-features = false, features = ["attributes"], optional = true }
 
