--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: '3 9 * * 0'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
